fix: Break large post titles on small devices

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -84,6 +84,7 @@ textarea {
 		}
 		overflow-wrap: break-word;
 		word-wrap: break-word;
+		hyphens: auto;
 	}
 
 	h1 {
